Style guest login button

--- a/index.html
+++ b/index.html
@@ -2258,9 +2258,9 @@
             width: 100%;
             padding: 1rem;
             margin-bottom: 1.5rem;
-            background: transparent;
-            border: 2px solid rgba(212, 175, 55, 0.5);
-            color: var(--gold);
+            background: var(--gold);
+            border: 2px solid var(--bright-gold);
+            color: var(--deep-green);
             font-size: 1rem;
             font-weight: 600;
             cursor: pointer;
@@ -2269,8 +2269,8 @@
         }
 
         .guest-login-btn:hover {
-            background: rgba(212, 175, 55, 0.15);
-            border-color: var(--gold);
+            background: var(--bright-gold);
+            border-color: var(--bright-gold);
         }
 
         .guest-badge {
