--- a/index.html
+++ b/index.html
@@ -2478,17 +2478,17 @@
 
                 <!-- Guest Login -->
                 <button class="guest-login-btn" onclick="loginAsGuest()">View Scores as Guest</button>
-                <div class="guest-login-divider">
+                <!-- <div class="guest-login-divider">
                     <span>or</span>
                 </div>
                 
-                <!-- Toggle buttons -->
+                <!-- Toggle buttons 
                 <div class="login-toggle">
                     <button class="toggle-btn active" onclick="showLoginForm('existing')">Existing Competitor</button>
                     <button class="toggle-btn" onclick="showLoginForm('new')">New Competitor</button>
                 </div>
 
-                <!-- Existing User Form -->
+                <!-- Existing User Form 
                 <div id="existingUserForm" class="login-form">
                     <div class="input-group">
                         <label for="existingEmail">Email Address</label>
@@ -2501,7 +2501,7 @@
                     <button onclick="loginExisting()">Login</button>
                 </div>
 
-                <!-- New User Form -->
+                <!-- New User Form 
                 <div id="newUserForm" class="login-form hidden">
                     <div class="input-group">
                         <label for="nickname">Display Name</label>
@@ -2516,7 +2516,7 @@
                         <input type="password" id="newPassword" placeholder="Create a password" onkeypress="handleLoginKeyPress(event, 'new')">
                     </div>
                     <button onclick="registerNewUser()">Create Account</button>
-                </div>
+                </div> -->
             </div>
         </div>
 
