--- a/index.html
+++ b/index.html
@@ -2478,17 +2478,17 @@
 
                 <!-- Guest Login -->
                 <button class="guest-login-btn" onclick="loginAsGuest()">View Scores as Guest</button>
-                <!-- <div class="guest-login-divider">
+                <div class="guest-login-divider">
                     <span>or</span>
                 </div>
                 
-                <!-- Toggle buttons 
+                <!-- Toggle buttons -->
                 <div class="login-toggle">
                     <button class="toggle-btn active" onclick="showLoginForm('existing')">Existing Competitor</button>
                     <button class="toggle-btn" onclick="showLoginForm('new')">New Competitor</button>
                 </div>
 
-                <!-- Existing User Form 
+                <!-- Existing User Form -->
                 <div id="existingUserForm" class="login-form">
                     <div class="input-group">
                         <label for="existingEmail">Email Address</label>
