--- a/index.html
+++ b/index.html
@@ -2485,7 +2485,7 @@
                 <!-- Toggle buttons -->
                 <div class="login-toggle">
                     <button class="toggle-btn active" onclick="showLoginForm('existing')">Existing Competitor</button>
-                    <button class="toggle-btn" onclick="showLoginForm('new')">New Competitor</button>
+                    <!--<button class="toggle-btn" onclick="showLoginForm('new')">New Competitor</button> -->
                 </div>
 
                 <!-- Existing User Form -->
