Tighten summary table for small screens

--- a/index.html
+++ b/index.html
@@ -1801,6 +1801,45 @@
                 padding: 0.5rem 0.75rem;
                 font-size: 0.7rem;
             }
+
+            .summary-table th.rank-col,
+            .summary-table td.rank-col {
+                min-width: 24px;
+                width: 24px;
+                padding: 0.35rem 0.25rem;
+                font-size: 0.75rem;
+            }
+
+            .summary-table th.competitor-col,
+            .summary-table td.competitor-name {
+                min-width: 90px;
+                max-width: 110px;
+                padding: 0.4rem;
+                font-size: 0.72rem;
+                left: 24px;
+            }
+
+            .summary-table th.pts-col,
+            .summary-table td.pts-col {
+                min-width: 36px;
+                padding: 0.35rem 0.25rem;
+                font-size: 0.8rem;
+            }
+
+            .summary-table td {
+                padding: 0.4rem;
+                font-size: 0.72rem;
+            }
+
+            .match-header-cell {
+                min-width: 70px !important;
+                padding: 0.3rem !important;
+                font-size: 0.68rem;
+            }
+
+            .match-header-cell-inner {
+                min-height: 90px;
+            }
             
             .match-header {
                 font-size: 0.9rem;
