--- a/index.html
+++ b/index.html
@@ -1029,22 +1029,28 @@
             align-items: center;
         }
 
+        .summary-header-row {
+            display: flex;
+            align-items: center;
+            gap: 1rem;
+            margin-bottom: 1rem;
+        }
+
         .export-btn {
-            padding: 0.8rem 1.5rem;
+            padding: 0.35rem 0.75rem;
             background: rgba(46, 204, 113, 0.15);
-            border: 2px solid rgba(46, 204, 113, 0.4);
+            border: 1px solid rgba(46, 204, 113, 0.4);
             color: #2ecc71;
-            font-size: 0.95rem;
+            font-size: 0.7rem;
             font-weight: 700;
             text-transform: uppercase;
             letter-spacing: 0.03em;
             cursor: pointer;
-            border-radius: 5px;
+            border-radius: 4px;
             transition: all 0.3s ease;
-            margin-left: auto;
             display: flex;
             align-items: center;
-            gap: 0.5rem;
+            gap: 0.3rem;
         }
 
         .export-btn:hover {
@@ -1054,8 +1060,8 @@
         }
 
         .export-btn svg {
-            width: 18px;
-            height: 18px;
+            width: 14px;
+            height: 14px;
             fill: currentColor;
         }
 
@@ -1697,11 +1703,8 @@
             }
 
             .export-btn {
-                padding: 0.6rem 1rem;
-                font-size: 0.8rem;
-                margin-left: 0;
-                flex: 1 1 100%;
-                justify-content: center;
+                padding: 0.3rem 0.6rem;
+                font-size: 0.65rem;
             }
 
             .round-filter-group {
@@ -2663,8 +2666,14 @@
             <!-- Summary Tab -->
             <div id="summaryTab" style="margin-top: 2rem;">
                 <div style="background: rgba(255, 255, 255, 0.05); padding: 2rem; border-radius: 10px; border: 2px solid var(--gold); margin-bottom: 2rem;">
-                    <h2 style="font-family: 'Bebas Neue', cursive; font-size: 2.5rem; color: var(--bright-gold); margin-bottom: 1rem; letter-spacing: 0.1em;">Match Summary</h2>
-                    
+                    <div class="summary-header-row">
+                        <h2 style="font-family: 'Bebas Neue', cursive; font-size: 2.5rem; color: var(--bright-gold); margin: 0; letter-spacing: 0.1em;">Match Summary</h2>
+                        <button class="export-btn" onclick="exportToPDF()" title="Export to PDF">
+                            <svg viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm-1 7V3.5L18.5 9H13zM6 20V4h6v6h6v10H6z"/></svg>
+                            Export
+                        </button>
+                    </div>
+
                     <!-- Filters -->
                     <div class="summary-filters">
                         <button class="filter-btn active" onclick="filterMatches('all')">All Matches</button>
@@ -2675,10 +2684,6 @@
                             <select id="roundSelect" class="round-select" onchange="onRoundSelectChange()">
                             </select>
                         </div>
-                        <button class="export-btn" onclick="exportToPDF()" title="Export to PDF">
-                            <svg viewBox="0 0 24 24"><path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm-1 7V3.5L18.5 9H13zM6 20V4h6v6h6v10H6z"/></svg>
-                            Export
-                        </button>
                     </div>
                 </div>
 
@@ -5234,8 +5239,8 @@
                 loseFg: '#C0392B',
                 drawFg: '#D4820A',
                 pointsFg: '#5A4A00',
-                pendingHomeWin: '#1F7A1F',
-                pendingAwayWin: '#B23A2B',
+                pendingHomeWin: '#2471A3',
+                pendingAwayWin: '#7D3C98',
                 pendingDraw: '#D4820A',
                 exactBg: '#C6EFCE',
             };
@@ -5258,8 +5263,20 @@
             doc.text('Exported ' + dateStr, 14, 22);
             doc.setTextColor(0, 0, 0);
 
-            // --- Calculate actual tries total ---
+            // --- Calculate actual + estimated tries ---
             const totalActualTries = getTotalActualTries();
+            const completedTriesMatches = allMatches.filter(m => m.actualTries1 !== null && m.actualTries2 !== null).length;
+            const totalMatchCount = allMatches.length;
+            let estimatedTotalTries = null;
+            if (completedTriesMatches > 0) {
+                estimatedTotalTries = Math.round((totalActualTries / completedTriesMatches) * totalMatchCount);
+            }
+
+            // --- Build tries header label ---
+            let triesHeaderLabel = 'Predicted\nTries';
+            if (completedTriesMatches > 0) {
+                triesHeaderLabel += '\n' + totalActualTries + ' actual / ' + estimatedTotalTries + ' est.';
+            }
 
             // --- Build header row ---
             const headerRow = [
@@ -5270,7 +5287,7 @@
                     content: m.team1 + ' vs ' + m.team2 + '\n' + m.date + ' ' + m.time,
                     styles: { halign: 'center' }
                 })),
-                { content: 'Predicted\nTries' + (totalActualTries > 0 ? '\n(' + totalActualTries + ' actual)' : ''), styles: { halign: 'center' } }
+                { content: triesHeaderLabel, styles: { halign: 'center' } }
             ];
 
             // --- Build actual results row ---
@@ -5293,7 +5310,7 @@
                     }
                     return { content: 'TBD', styles: { textColor: hexToRgb(C.gray) } };
                 }),
-                { content: totalActualTries > 0 ? String(totalActualTries) + ' so far' : '', styles: { textColor: hexToRgb(C.gray), fontStyle: 'bold', fontSize: 6 } }
+                { content: completedTriesMatches > 0 ? totalActualTries + ' / ' + estimatedTotalTries + ' est.' : '', styles: { textColor: hexToRgb(C.gray), fontStyle: 'bold', fontSize: 6 } }
             ];
 
             // --- Build data rows ---
@@ -5395,7 +5412,7 @@
                 1: { cellWidth: 25 },
                 2: { cellWidth: 12 },
             };
-            colStyles[lastMatchCol] = { cellWidth: 14 };
+            colStyles[lastMatchCol] = { cellWidth: 20 };
 
             doc.autoTable({
                 head: [headerRow],
