--- a/index.html
+++ b/index.html
@@ -5102,7 +5102,7 @@
                 const hasResult = match.actualScore1 !== null && match.actualScore2 !== null;
                 const hasTries = match.actualTries1 !== null && match.actualTries2 !== null;
                 const totalMatchTries = hasTries ? match.actualTries1 + match.actualTries2 : null;
-                const jokerBadge = match.jokerEligible ? '<div class="joker-eligible-badge">🃏 Joker Eligible</div>' : '';
+                const jokerBadge = match.jokerEligible ? '<div class="joker-eligible-badge">🃏 Joker Eligible</div>' : '<div class="joker-eligible-badge" style="visibility: hidden;">🃏 Joker Eligible</div>';
                 html += `<th class="match-header-cell ${match.jokerEligible ? 'joker-eligible-header' : ''}">
                     <div class="match-header-cell-inner">
                         <div class="match-header-top">
